--- a/dupeFinder.csproj
+++ b/dupeFinder.csproj
@@ -5,5 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="StackExchange.Redis" Version="*"/>
+    <PackageReference Include="NDesk.Options.Core" Version="1.2.5"/>
   </ItemGroup>
 </Project>
